package com.abdullah996.notecompose.core.util

object TestTags {
    const val ORDER_SECTION="ORDER_SECTION"
    const val TITLE_TEXT_FILED="TITLE_TEXT_FILED"
    const val CONTENT_TEXT_FILED="CONTENT_TEXT_FILED"
    const val NOTE_ITEM="NOTE_ITEM"
}